--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.3",
     "@web3auth/web3auth": "^2.1.3",
+    "chart.js": "^4.1.1",
     "graphql": "^16.6.0",
     "magic-sdk": "7.0.0",
     "moralis": "^2.6.7",
     "moralis-v1": "^1.11.0",
     "next": "^12.3.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0",
     "react-moralis": "^1.4.2",
     "web3uikit": "^1.0.4"
