--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.3",
+    "@wagmi/chains": "^0.1.10",
     "@web3auth/web3auth": "^2.1.3",
     "chart.js": "^4.1.1",
+    "ethers": "^5.7.2",
     "graphql": "^16.6.0",
     "magic-sdk": "7.0.0",
     "moralis": "^2.6.7",
@@ -24,6 +26,7 @@
     "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0",
     "react-moralis": "^1.4.2",
+    "wagmi": "^0.10.11",
     "web3uikit": "^1.0.4"
   },
   "devDependencies": {
