--- a/constants/networkMapping.json
+++ b/constants/networkMapping.json
@@ -8,6 +8,9 @@
         ],
         "LPToken": [
             "0x8e502b0A0480D6Dc43C70795E665f9A4C4bf2131"
+        ],
+        "TokenControl": [
+            "0x0428BE3C63277a1244fc1E610E9F2D9D5Cf089Fd"
         ]
     },
     "5": {
@@ -19,6 +22,9 @@
         ],
         "LPToken": [
             "0x8e502b0A0480D6Dc43C70795E665f9A4C4bf2131"
+        ],
+        "TokenControl": [
+            "0x0428BE3C63277a1244fc1E610E9F2D9D5Cf089Fd"
         ]
     },
     "1337": {
@@ -30,6 +36,9 @@
         ],
         "LPToken": [
             "0x8e502b0A0480D6Dc43C70795E665f9A4C4bf2131"
+        ],
+        "TokenControl": [
+            "0x0428BE3C63277a1244fc1E610E9F2D9D5Cf089Fd"
         ]
     }
 }
